--- a/tutorial0.html
+++ b/tutorial0.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Tutorial 19: Installing & Running Vallaipallam 🍌</title>
+  <title>Tutorial : Installing & Running Vallaipallam 🍌</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
