--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>வாழைபழம்- Tamil Programming Language</title>
+  <title>Vallaipallam-வாழைபழம்- Tamil Programming Language</title>
   <style>
     body {
       margin: 0;
@@ -139,7 +139,7 @@
 <body>
   <header class="glass-header">
     <span class="logo pulse">🍌</span>
-    <h1 class="title">Vallaipallam - Tamil Programming Language</h1>
+    <h1 class="title">Vallaipallam © - Tamil Programming Language</h1>
   </header>
 
   <main class="container">
