--- a/tutorial0.html
+++ b/tutorial0.html
@@ -66,7 +66,7 @@ vallaipallam firstcode.jnr</pre>
       <h3>🔁 Notes</h3>
       <ul>
         <li>🧠 You can update the language anytime using <code style="color:#00ccff">pip install --upgrade vallaipallam</code></li>
-        <li>📝 Make sure each program ends with <code style="color:#ffe600">.vp</code> extension</li>
+        <li>📝 Make sure each program ends with <code style="color:#ffe600">.jnr</code> extension</li>
         <li>📂 Keep all your codes in a dedicated folder for easy access</li>
       </ul>
     </section>
