--- a/tutorial0.html
+++ b/tutorial0.html
@@ -9,7 +9,7 @@
 <body>
   <header class="glass-header">
     <span class="logo pulse">🍌</span>
-    <h1 class="title">Tutorial 19: Install & Run Vallaipallam</h1>
+    <h1 class="title">Tutorial : Install & Run Vallaipallam</h1>
   </header>
 
   <main class="container">
@@ -43,7 +43,7 @@ pip install vallaipallam</pre>
 
     <section>
       <h3>📜 Step 4: Write Your First Code</h3>
-      <p>Inside your project folder, create a new file with the extension <code style="color:#ffcc00">.vp</code> (e.g. <code>firstcode.vp</code>).</p>
+      <p>Inside your project folder, create a new file with the extension <code style="color:#ffcc00">.jnr</code> (e.g. <code>firstcode.jnr</code>).</p>
       <pre style="background:#111; color:#ffe600; padding:1rem; border-radius:10px;">
 வெளியிடு("வணக்கம் உலகம்")</pre>
       <p>This is a simple print statement in Vallaipallam.</p>
